# ditr

./: .gitignore  3rd-party-licenses.txt  LICENSE  README.md  index.html  pyproject.toml
configs/_base_/: default_runtime.py  default_runtime_notest.py
configs/nuscenes/: distill-pt-v3m1-0-distill.py  distill-pt-v3m1-0-nu-sk-wa.py  semseg-pt-v3m1-0-base.py  semseg-pt-v3m1-0-image.py
configs/s3dis/: semseg-pt-v3m1-0-base.py  semseg-pt-v3m1-0-image.py  semseg-pt-v3m1-0-ppt-ft.py
configs/scannet/: semseg-pt-v3m1-0-base.py  semseg-pt-v3m1-0-image.py  semseg-pt-v3m1-1-ppt-ft-short.py  semseg-pt-v3m1-1-ppt-ft.py  semseg-spunet-v1m1-0-base.py  semseg-spunet-v1m1-2-efficient-lr20.py
configs/scannet200/: distill-pt-v3m1-0-distill.py  distill-pt-v3m1-0-st-sc-distill.py  distill-pt-v3m1-0-st-sc-ppt.py  distill-pt-v3m1-0-st-sc-s3-ppt.py  distill-spunet-v1m1-0-distill.py  distill-spunet-v1m1-0-st-sc-distill.py  distill-spunet-v1m1-0-st-sc-ppt.py  semseg-pt-v3m1-0-base.py  semseg-pt-v3m1-0-image.py  semseg-pt-v3m1-1-ppt-ft.py  semseg-spunet-v1m1-0-base.py
configs/semantic_kitti/: distill-pt-v3m1-0-distill.py  semseg-pt-v3m1-0-base.py  semseg-pt-v3m1-0-image-self-attn-last.py  semseg-pt-v3m1-0-image-submit.py  semseg-pt-v3m1-0-image.py  semseg-pt-v3m1-0-nu-sk-wa-decouple-short.py  semseg-pt-v3m1-0-nu-sk-wa-decouple.py  semseg-pt-v3m1-0-nu-sk-wa-vlowbb-epoch=8.py  semseg-pt-v3m1-0-nu-wa-decouple-short.py  semseg-pt-v3m1-0-nu-wa-decouple.py
configs/structured3d/: semseg-spunet-v1m1-0-base.py  semseg-spunet-v1m1-0-image.py
configs/waymo/: distill-pt-v3m1-0-distill.py  semseg-pt-v3m1-0-base.py  semseg-pt-v3m1-0-image-self-attn-bottleneck.py  semseg-pt-v3m1-0-image-self-attn-dec.py  semseg-pt-v3m1-0-image.py  semseg-pt-v3m1-0-nu-sk-wa-decouple.py  semseg-pt-v3m1-0-nu-wa-decouple.py
scripts/: test.sh  train.sh
(+31 files in other folders)
