[project]
name = "ditr"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "addict>=2.4.0",
  "einops>=0.8.0",
  "h5py>=3.12.1",
  "imageio>=2.36.0",
  "open3d>=0.18.0",
  "plyfile>=1.1",
  "pyyaml>=6.0.2",
  "rerun-sdk>=0.19.0",
  "scipy>=1.14.1",
  "sharedarray>=3.2.4",
  "spconv-cu120>=2.3.6",
  "tensorboard>=2.18.0",
  "tensorboardx>=2.6.2.2",
  "termcolor>=2.5.0",
  "timm>=1.0.11",
  "torch==2.4.1+cu124",
  "torch-cluster>=1.6.3",
  "torch-geometric>=2.6.1",
  "torch-scatter>=2.1.2",
  "torch-sparse>=0.6.18",
  "torchvision==0.19.1+cu124",
  "wheel>=0.44.0",
  "yapf<0.40.2",
  "flash-attn==2.6.3",
  "pointops",
  "albumentations==1.4.21",
  "wandb==0.18.5",
]
authors = [{ name = "Karim Knaebel" }, { name = "Kadir Yilmaz" }]
description = "DINO in the Room: Leveraging 2D Foundation Models for 3D Segmentation (DITR)"
readme = "README.md"
license = "AGPL-3.0"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.4.0+cu124.html"
format = "flat"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torch_scatter = [{ index = "pyg" }]
torch_sparse = [{ index = "pyg" }]
torch_cluster = [{ index = "pyg" }]
pointops = { path = "./libs/pointops" }

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
pointops = [{ requirement = "torch", match-runtime = true }]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.6.3"
requires-dist = ["torch", "einops"]

[[tool.uv.dependency-metadata]]
name = "pointops"
version = "1.0"
requires-dist = ["numpy", "torch"]
